--- a/reppo/templates/base.html
+++ b/reppo/templates/base.html
@@ -22,11 +22,11 @@
 <header>
     <div class="container">
         <h1>
-            <i class="fa fa-cube"></i>
-            {{ SITE_NAME }}
+            <i class="fa fa-book"></i>
+            reppo
             <span class="separator">/</span>
             <a href="{{ url_for('.tree_no_rev') }}">
-                {{ g.repo_key }}
+                {{ g.repo_name }}
             </a>
         </h1>
     </div>
