--- a/reppo/templates/commits.html
+++ b/reppo/templates/commits.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {%- from 'macros.html' import render_pagination with context -%}
 
-{% block title %}Commits · {{ g.repo_key }}{% endblock title %}
+{% block title %}Commits · {{ g.repo_name }}{% endblock title %}
 
 {% block navigation %}
 {% include '_navigation.html' %}
