--- a/reppo/templates/blob.html
+++ b/reppo/templates/blob.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ request.view_args.path }} at {{ g.rev }} · {{ g.repo_key }}{% endblock title %}
+{% block title %}{{ request.view_args.path }} at {{ g.rev }} · {{ g.repo_name }}{% endblock title %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/highlight.css') }}">
@@ -11,26 +11,65 @@
 {% endblock navigation %}
 
 {% block content %}
-{{ macros.commit_details(commit, preview=true) }}
+{#{{ macros.commit_details(commit, preview=true) }}#}
 
-{#
-<div>
-    {{ contributors|map(attribute='name')|join(', ') }}
+<div class="file-history-preview">
+    <div class="file-history-preview-header">
+        {{ macros.authorship_for_commit(commit, true) }}
+        <div class="commit-title">
+            <a href="{{ url_for('.commit', path=request.view_args.path) }}">
+                {{ commit.message.summary|jiralink(commit.id) }}
+            </a>
+        </div>
+    </div>
+    <div class="participation">
+        <span>
+            <strong>{{ contributors|count }}</strong>
+            contributors
+        </span>
+        {% for contributor in contributors %}
+        <a>
+            <img src="{{ url_for('avatar', name=contributor) }}" height="20" width="20" class="avatar">
+        </a>
+        {% endfor %}
+    </div>
 </div>
-#}
 
 <div class="file">
     <div class="meta">
         <div class="info">
-            {{ line_count }} lines ({{ loc_count }} sloc) | {{ blob.size|filesizeformat }}
+            {% if not blob.is_binary %}
+            <span>{{ blob.line_count }} lines ({{ blob.loc_count }} sloc)</span>
+            |
+            {% endif %}
+            <span>{{ blob.size|filesizeformat }}</span>
         </div>
         <div class="actions">
-            <a href="{{ url_for('.raw', path=request.view_args.path) }}" class="view-button">Raw</a>
-            <a href="{{ url_for('.commits', path=request.view_args.path) }}" class="view-button">History</a>
+            <div class="button-group">
+                <a href="{{ url_for('.raw', path=request.view_args.path) }}" class="mini-button">Raw</a>
+                {% if not blob.is_binary %}
+                <a href="{{ url_for('.blame', path=request.view_args.path) }}" class="mini-button">Blame</a>
+                {% endif %}
+                <a href="{{ url_for('.commits', path=request.view_args.path) }}" class="mini-button">History</a>
+            </div>
         </div>
     </div>
     <div class="diff-wrapper">
-        {{ highlighted_data }}
+    {% if blob.is_binary %}
+        <div class="image">
+            {% if blob.is_image %}
+            <span class="border-wrap">
+                <img src="{{ url_for('.raw', path=request.view_args.path, _external=true) }}" alt="{{ request.view_args.path }}">
+            </span>
+            {% else %}
+            <a href="{{ url_for('.raw', path=request.view_args.path, _external=true) }}">
+                View Raw
+            </a>
+            {% endif %}
+        </div>
+    {% else %}
+        {{ blob.data }}
+    {% endif %}
     </div>
 </div>
 {% endblock content %}
