--- a/reppo/templates/refs.html
+++ b/reppo/templates/refs.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ ref_type|capitalize }} · {{ g.repo_key }}{% endblock title %}
+{% block title %}{{ ref_type|capitalize }} · {{ g.repo_name }}{% endblock title %}
 
 {% block content %}
 <div class="refs">
+    {#
     <div class="ref default-ref">
         Default:
         <a href="{{ url_for('.tree') }}">{{ g.repo.head.shorthand }}</a>
     </div>
     <hr>
+    #}
 {% for r in refs|sort %}
     <div class="ref">
         <a href="{{ url_for('.tree', rev=r) }}">{{ r }}</a>
