--- a/reppo/static/css/reppo.css
+++ b/reppo/static/css/reppo.css
@@ -41,6 +41,10 @@ footer {
     margin-top: 40px;
 }
 
+.right {
+    float: right;
+}
+
 .attention {
     background-color: #f7c8c8;
     border: 1px solid #e9aeae;
@@ -119,7 +123,12 @@ footer {
     margin-right: 10px;
 }
 
-.rev-select.outline-button {
+.commits i {
+    color: #333;
+}
+
+.rev-select.outline-button,
+.commits.outline-button {
     font-weight: normal;
     margin-left: 0;
     text-shadow: 0 1px 0 rgba(255,255,255,0.9);
@@ -139,7 +148,8 @@ footer {
     -webkit-appearance: none
 }
 
-.rev-select.outline-button:hover {
+.rev-select.outline-button:hover,
+.commits.outline-button:hover {
     text-decoration: none;
     background-color: #ddd;
     background-image: -moz-linear-gradient(#eee, #ddd);
@@ -149,7 +159,8 @@ footer {
     border-color: #ccc
 }
 
-.rev-select.outline-button:active {
+.rev-select.outline-button:active,
+.commits.outline-button:active {
     background-color: #dcdcdc;
     background-image: none;
     border-color: #b5b5b5;
